--- a/asplos2022/.gitignore
+++ b/asplos2022/.gitignore
@@ -6,6 +6,7 @@ build/
 
 # Results
 exercise_0/result/
-exercise_1/result/
+exercise_1/result_1/
+exercise_1/result_2/
 exercise_2/result/
 exercise_3/result/
