--- a/asplos2022/.gitignore
+++ b/asplos2022/.gitignore
@@ -8,5 +8,6 @@ build/
 exercise_1/result/
 exercise_2/result_1/
 exercise_2/result_2/
-exercise_3/result/
+exercise_3/result_1/
+exercise_3/result_2/
 exercise_4/result/
