--- a/asplos2023/.gitignore
+++ b/asplos2023/.gitignore
@@ -5,9 +5,6 @@ astra-sim/
 build/
 
 # Results
-exercise_1/result/
-exercise_2/result_1/
-exercise_2/result_2/
-exercise_3/result_1/
-exercise_3/result_2/
-exercise_4/result/
+exercise_1/result_1-1/
+exercise_1/result_1-2/
+exercise_1/result_1-3/
