--- a/hoti2024/.gitignore
+++ b/hoti2024/.gitignore
@@ -4,7 +4,15 @@ astra-sim/
 # ASTRA-sim build
 build/
 
-# Results
+# Symlink
+chakra
+
+# Demo 1
 demo1/allreduce
 demo1/3nodes
 demo1/*.pdf
+
+# Demo 2
+demo2/workload_chakra/
+demo2/*.pdf
+demo2/*.log
